--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "angular-8-registration-login-example",
+    "name": "covid-slayer",
     "version": "1.0.0",
     "repository": {
         "type": "git",
-        "url": "https://github.com/cornflourblue/angular-8-registration-login-example.git"
+        "url": "https://github.com/dimpalsingh/covid-slayer-front-end"
     },
     "scripts": {
         "build": "webpack --mode production",
